# Alpha101

./: .clang-format  .clangd  .gitignore  101Alpha_code_1.py  Alpha101.h  CMakeLists.txt  GBenchmark_Alpha101.cpp  GTest_Alpha101.cpp  README.md  alpha101.h  benchmark_alpha101.cpp  eztest.cpp  test_alpha101.cpp  useeigen.cpp
WorldQuant_alpha101_code/: 101Alpha_code_1.py  101Alpha_code_2.py
include/: Alpha101.h  Alpha101Utils.h
tests/: GBenchmark_Alpha101.cpp  GBenchmark_Alpha101Utils.cpp  GTest_Alpha101.cpp  GTest_Alpha101Utils.cpp
tests/benchmark/: alpha101_20260221_153048.json  alpha101_20260221_165701.json  alpha101_20260221_174915.json  alpha101_20260221_180809.json  alpha101_20260221_181738.json  alpha101_20260221_232528.json  alpha101utils_20260221_152832.json  alpha101utils_20260221_165445.json  alpha101utils_20260221_174659.json  alpha101utils_20260221_180555.json  alpha101utils_20260221_181524.json  alpha101utils_20260221_232313.json
tests/gtest/: alpha101_20260221_153313.xml  alpha101_20260221_165429.xml  alpha101_20260221_174642.xml  alpha101_20260221_180548.xml  alpha101_20260221_181516.xml  alpha101_20260221_232305.xml  alpha101utils_20260221_153311.xml  alpha101utils_20260221_165427.xml  alpha101utils_20260221_174640.xml  alpha101utils_20260221_180546.xml  alpha101utils_20260221_181514.xml  alpha101utils_20260221_232303.xml
